--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@popmotion/popcorn": "^0.4.4",
+    "@react-hook/mouse-position": "^4.1.0",
+    "framer-motion": "^3.1.1",
     "gatsby": "^2.26.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sass": "^2.8.0",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
+    "react-cool-inview": "^1.2.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
   }
