--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@popmotion/popcorn": "^0.4.4",
     "framer-motion": "^3.1.1",
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.8.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-transformer-sharp": "^2.9.0",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-cool-inview": "^1.2.0",
