--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^3.1.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
+    "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-source-filesystem": "^2.8.1",
@@ -28,7 +29,8 @@
     "react": "^16.13.1",
     "react-cool-inview": "^1.2.0",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-responsive": "^8.2.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
