--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-google-gtag": "^2.8.0",
+    "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sharp": "^2.11.2",
-    "gatsby-source-filesystem": "^2.8.1",
-    "gatsby-transformer-sharp": "^2.9.0",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.12.1",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-cool-inview": "^1.2.0",
