--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^3.1.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
+    "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-google-gtag": "^2.8.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
